# magic-shop

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PLANNING.md  README.md  config.yaml  docker-compose.yml  image-example.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  logger.py  main.py
app/models/: __init__.py  product.py
app/routes/: admin.py  public.py
app/services/: gemini.py  image.py  product.py
app/static/css/: style.css
app/templates/: 404.html  base.html  index.html  product.html
app/templates/admin/: base.html  list.html  new.html
tests/: __init__.py  test_config.py  test_gemini.py  test_image.py  test_integration.py  test_models.py  test_product_service.py
